--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id= 'yellow'>
           <div id='green'>
             <div id='blue'>
-              <div id= '>
-                <div></div> <!-- the grandest child div -->
+              <div id= 'indigo'>
+                <div></div id='violet'> <!-- the grandest child div -->
               </div>
             </div>
           </div>
